test/org/midica/testfiles/failing/define-assigner-double-2.midica
INSTRUMENTS
	0    PERCUSSIVE_ORGAN       PERCUSSIVE_ORGAN
END

DEFINE CHORD==CRD


CRD crd c/d/e

0  crd  /4  v=99
